--- a/assets/styles/pages/page_home.css
+++ b/assets/styles/pages/page_home.css
@@ -5,6 +5,25 @@
     --color-pink-aroma: #BF746B;
 }
 
+h2{
+    font-weight: 700;
+    display: inline-block;
+    font-size: 30px;
+    line-height: 30px;
+    color: var(--color-green-aroma);
+}
+
+@media (max-width: 400px) {
+    h2, .as-h2{
+        font-size: 20px;
+        /* word-break: break-word; */
+    }
+    .section-home-3 .h3-in-grande-ligne{
+        font-size: 16px;
+        line-height: 19px;
+    }
+}
+
 .font-green{
     color : var(--color-green-aroma);
 }
